# Laelaps

./: .gitignore  .pylintrc  Dockerfile  README.md  REUSE.toml  docker-compose.yaml  format.sh  pyproject.toml
.github/workflows/: publish-docker-image.yaml  publish-pypi.yaml  python-build-and-test.yaml  reuse-compliance-check.yaml
.reuse/: dep5
laelaps/: __init__.py  __main__.py  alias_generation_and_verification.py  config_model.py  database_repository.py  email_headers_models.py  email_headers_parser.py  imap_monitor.py  imap_repository.py
tests/: __init__.py
tests/unit/: __init__.py  test_alias_generation_and_verification.py  test_config_model.py  test_database_repository.py  test_email_headers_models.py  test_email_headers_parser.py  test_imap_monitor.py  test_imap_repository.py
