# SPDX-FileCopyrightText: 2023 Jan Maarten van Doorn <laelaps@vandoorn.cloud>
#
# SPDX-License-Identifier: MPL-2.0

[build-system]
requires      = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laelaps"
version = "0.0.3"
description = "Catchall email alias monitor and verifier"
readme = "README.md"
authors = [{ name = "Jan Maarten van Doorn", email = "laelaps@vandoorn.cloud" }]
license = { text = "MPL-2.0" }
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
keywords = ["catchall","email", "alias", "monitor", "verification"]
dependencies = [
    "aioimaplib == 1.0.1",
    "email_validator == 2.0.0",
    "IMAPClient == 2.3.1",
    "nest_asyncio == 1.5.6",
    "numpy == 1.25.1",
    "pandas == 2.0.3",
    "pydantic == 2.0.3",
    "cryptography == 41.0.2",
    "structlog == 23.1.0",
    "toml == 0.10.2",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pandas-stubs == 2.0.2.230605",
    "types-toml == 0.10.8.7",
    "autoflake == 2.2.0",
    "bandit == 1.7.5",
    "black == 23.7.0",
    "docformatter == 1.7.5",
    "flake8 ~= 6.0.0",
    "mypy == 1.4.1",
    "mypy-extensions == 1.0.0",
    "pydocstyle == 6.3.0",
    "pyflakes == 3.0.1",
    "pytest == 7.4.0",
    "pytest-cov == 4.1.0",
    "pylint == 2.17.4",
    "pylint-gitlab == 1.2.0",
    "pyproject-flake8 == 6.0.0.post1",
    "reuse == 2.1.0",
]

[project.urls]
Homepage = "https://github.com/Marmalade8478/Laelaps"

[tool.pytest.ini_options]
addopts = "--cov=laelaps --cov-fail-under=99  --cov-report xml:cov.xml"

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"

[tool.docformatter]
recursive = true
wrap-descriptions = 120
wrap-summaries = 120
blank = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E501", "W605"]
max-complexity = 10

[mypy]
python_version = "3.11"
no_implicit_optional = true
scripts_are_modules = true
warn_unused_ignores = true
show_error_codes = true
enable_error_code = "ignore-without-code"
ignore_missing_imports = true

# Ignore missing imports for packages that come without typehints
[[tool.mypy.overrides]]
module = ["aioimaplib", "email_validator"]
ignore_missing_imports = true