# SPDX-FileCopyrightText: 2024 Jan Maarten van Doorn <laelaps@vandoorn.cloud>
#
# SPDX-License-Identifier: MPL-2.0

[build-system]
requires      = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laelaps"
version = "0.0.4"
description = "Catchall email alias monitor and verifier"
readme = "README.md"
authors = [{ name = "Jan Maarten van Doorn", email = "laelaps@vandoorn.cloud" }]
license = { text = "MPL-2.0" }
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
keywords = ["catchall","email", "alias", "monitor", "verification"]
dependencies = [
    "aioimaplib == 1.1.0",
    "email_validator == 2.2.0",
    "IMAPClient == 3.0.1",
    "nest_asyncio == 1.6.0",
    "numpy == 2.2.1",
    "pandas == 2.2.3",
    "pydantic == 2.10.4",
    "pydantic-settings == 2.7.0",
    "cryptography == 43.0.1",
    "structlog == 24.4.0",
    "toml == 0.10.2",
]
requires-python = ">=3.13.0"

[project.optional-dependencies]
test = [
    "pandas-stubs == 2.2.1.240316",
    "types-toml == 0.10.8.20240310",
    "autoflake == 2.3.1",
    "bandit == 1.8.0",
    "black == 24.10.0",
    "docformatter == 1.7.5",
    "flake8 ~= 7.1.1",
    "mypy == 1.14.0",
    "mypy-extensions == 1.0.0",
    "pydocstyle == 6.3.0",
    "pyflakes == 3.2.0",
    "pytest == 8.3.4",
    "pytest-cov == 6.0.0",
    "pylint == 3.3.3",
    "pylint-gitlab == 2.0.1",
    "Flake8-pyproject == 1.2.3",
    "reuse == 5.0.2",
]

[project.urls]
Homepage = "https://github.com/JanMaartenvanDoorn/Laelaps"

[tool.pytest.ini_options]
addopts = "--cov=laelaps --cov-fail-under=99  --cov-report xml:cov.xml"

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"

[tool.docformatter]
recursive = true
wrap-descriptions = 120
wrap-summaries = 120
blank = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E501", "W605"]
max-complexity = 10

[mypy]
python_version = "3.13"
plugins = ['pydantic.mypy']
no_implicit_optional = true
scripts_are_modules = true
warn_unused_ignores = true
show_error_codes = true
enable_error_code = "ignore-without-code"
ignore_missing_imports = true

# Ignore missing imports for packages that come without typehints
[[tool.mypy.overrides]]
module = ["aioimaplib", "email_validator"]
ignore_missing_imports = true
